--- a/FolderToPDF.csproj
+++ b/FolderToPDF.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SharpToken" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
